2012-06-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* operation/tree.php: Fixed a bug which shows groups
	that only have empty agents.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php: Added missed sec2 to the menu 
	structure data. The main sec2 (not subsection). Clean code

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/ajax/menu.ajax.php: Added an ajax file to the functions
	of menu category

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_menu.php
	index.php
	operation/menu.php
	godmode/menu.php: Added functions to manage sec and sec2 to control
	access in ACLs. Rename variables in menu construction to can get 
	all the sata structures in other sections

2012-06-18  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_config.php: Fixed bug: Notice to change
	Admin password is displayed for other users.

2012-06-18 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/auth/ldap.php, include/javascript/pandora.js,
	include/functions_incidents.php: cleaned source code style.
	
	* include/functions_users.php, operation/users/webchat.php: a lot of
	fixes, the "error connection" don't appear when timeout the
	connection for to get new messages, fixed empty messages, and
	fixed when make freak actions with user connect in webchat for
	example delete. And the most important the chat files (logs and
	others) now Pandora save this files in attachment dir instead the
	tmp system dir.
	
	* godmode/users/user_list.php: added to call to delete from the
	chat user list when delete a user.

2012-06-18  Sergio Martin <sergio.martin@artica.es>

	* include/functions_config.php: Cleaning the mess when 
	update setup fields. Now, looking the $sec2, only
	will be updated the fields of the current setup section
	In this way, set fields as empty value has been
	fixed

2012-06-18 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/graphs/functions_fsgraph.php